[package]
name = "finals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
itertools = "0.10.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
toml = "0.7.3"
chrono = "0.4.24"